Post EMNLP changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # These should not be commited
+# old version
+scripts/local_variables.sh
+# new version
 set_environment.sh
 
 # compressed formats
@@ -11,14 +14,11 @@ set_environment.sh
 # data
 DATA*
 
-#
-preprocess/jamr
-preprocess/kevin
-
 # external tools
 smatch*
 amr-evaluation/
-fairseq-*
+pytorch_scatter*
+fairseq/
 
 # virtual environments
 .python-version
