--- a/scripts/stack-transformer/environment_ppc.yml
+++ b/scripts/stack-transformer/environment_ppc.yml
@@ -2,22 +2,25 @@ channels:
   - defaults
   - https://public.dhe.ibm.com/ibmdl/export/pub/software/server/ibm-ai/conda
   - powerai
+
 dependencies:
-# for python 3.7 remove version specs from pytorch and apex
-  - python=3.6.9
+#
+# for python 3.7 remove version from pytorch and apex
   - requests
-  - line_profiler
+#
 # fairseq
   - cffi
   - fastBPE
-  # numpy (pip)
   - regex
   - sacrebleu
-  # torch (below)
-  # tqdm (below)
+#
 # transition_amr_parser
   - pytorch=1.1.0
   - apex=0.1.0
   - h5py
   - tqdm
-  # spacy (pip)
+  # The version available wont be as high as the x86 one
+  - spacy
+#    
+# debug/optimization
+  - line_profiler
